# proxmox-k3s

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  versions.yaml
docs/: PLAN.md  architecture.md
infra/clusters/apps/: .gitignore  main.tf
infra/clusters/cicd/: host_ports_baseline.txt  kubeconfig.yaml  main.tf  variables.tf
provisioner/: __init__.py  __main__.py  cli.py
provisioner/lib/: __init__.py  cluster_topology.py  container.py  hcl_parser.py  host_ports.py  k3s_installer.py  kubeconfig_merger.py  log.py  orchestrator.py  protocols.py  pve_client.py  pve_ssh.py  repo_locator.py  secret_loader.py  upstream_reader.py  versions.py
provisioner/lib/phases/: __init__.py  apiserver_ready.py  base.py  cilium_install.py  csi_smoke.py  envoy_smoke.py  gateway_crds.py  helm_releases.py  host_ports_check.py  install_k3s.py  kubeconfig_pull.py  ssh_probe.py  start_k3s_units.py  topology_labels.py  topology_writer.py  validate.py
provisioner/manifests/_smoke/: csi-smoke.yaml  envoy-gateway-smoke.yaml
provisioner/tests/: conftest.py  test_csi_envoy_smoke.py  test_hcl_parser.py  test_log.py  test_pve_ssh.py  test_secret_loader.py  test_solid_seams.py  test_tools_pveproxy.py  test_topology_labels.py
provisioner/tests/fixtures/: cicd_main.tf
tools/: __init__.py  pveproxy.py  repo_locator.py  versions.lock.yaml
values/: cert-manager.yaml  cilium.yaml  cloudflare-tunnel.yaml  envoy-gateway.yaml  proxmox-ccm.yaml  proxmox-csi-plugin.yaml
